--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-card-flip": "^1.2.3",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
